--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "auth0/login",
-    "description": "Laravel plugin that helps authenticate with the auth0 service",
+    "description": "Laravel plugin that helps authenticate with an OpenID service using Auth0 package",
     "license": "MIT",
     "require": {
         "php": ">=5.3.0",
